--- a/estilos.css
+++ b/estilos.css
@@ -1,123 +1,210 @@
-* {
+*{
     margin: 0;
     padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+
+}
+body {
+    background: #e6e6e6;
+}
+
+header, .main, footer {
+    width: 90%;
+    max-width: 1000px;
+    margin: 20px auto;
+}
+
+header nav {
+      background: #134986;
+      overflow: hidden;
+      width: max-content;
+
+
+}
+
+header nav ul {
+    list-style: none;
+}
+
+header nav ul li {
+    float: left;
+}
+
+header nav ul li a {
+    padding: 10px 20px;
+    display: block;
+    color: rgb(226, 195, 195);
+    text-decoration: none;
+
+}
+header nav ul li a:hover {
+    background: #75ACEC;
+
+}
+
+.main .articles {
+    width: 68,5%;
+    margin-right: 1.5%;
+    float: left;
+
+}
+
+.main .articles article {
+    padding: 20px;
+    background: #fff;
+    margin-bottom: 20px;
+}
+#nosotros {
+    width: 100%;
+    background: #057a49;
+    float: center;
+    padding: 30px;
     box-sizing: border-box;
 }
 
+
+
+#tabla  {
+    width: 100%;
+    float: left;
+    background: #2fa876;
+    text-align: center;
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+#pag1 {
+    background-image: url(https://www.menteasombrosa.com/wp-content/uploads/2019/11/psicoterapia-adultos-mayores-1280x720.jpeg);
+}
+#div{
+    width: 30%;
+    background: #5c93b8;
+    text-align: center;
+    float: right;
+    width: 30%;
+   
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
+}
+#div2{
+    padding: 30px;
+    background: rgb(106, 130, 196);
+    margin-bottom: 20px;
+    float: right;
+    width: 30%;
+}
+#div3{
+
+    background: #170997;
+    text-align: center;
+    width: 30%;
+    float: right;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+
+}
+#reserva {
+    
+    width: 50%;
+    background: #0f033b;
+    float: none;
+    padding: 30px;
+    color: cornsilk;
+    box-sizing: border-box;
+}
+#body2 {
+    
+    background-color: chartreuse;
+    text-align: center;
+    
+}
+
+#body5 {
+    background-color: #978d83;
+}
+#cpsi{
+    color: #021d12;
+    width: 30%;
+    background: #cfab89;
+    text-align: left;
+    float: left;
+  
+    
+
+}
+#cpsiq {
+    color: #021d12;
+ 
+    width: 30%;
+    background: #cfab89;
+    text-align: left;
+    float: right;
+  
+   
+
+}
+
+#cneuro {
+    color: #021d12;
+    width: 30%;
+    background: #cfab89;
+    text-align: left;
+    float: right;
+  
+    
+
+}
+
+#form1 {
+    background: rgb(18, 27, 104);
+    color: rgb(243, 239, 239);
+    clear: both;
+    padding: 10px 20px;
+    text-align: left;
+    font-size: 80%;
+  
+}
+
+#table, #th, #tr {
+    border: 1px solid black;
+    border-collapse: separate;
+  
+    width: 100%;
+    list-style: none;
+    padding:10px ;
+    border-spacing: 20px;
+    color: rgb(6, 6, 49);
+}
+#th {
+    background-color: bisque;
+    text-align: center;
+    list-style: none;
+    
+}
+ 
+ #tr:hover {
+    font-size: 17px;
+    background-color: #cf57c5;
+    
+
+}
+    
+
+.oli {
+    list-style: none;
+    
+}
 body {
     background: url(https://img.blogs.es/bloglenovo/wp-content/uploads/2019/04/nieve-hielo-groenlandia.jpg);
     background-size: cover;
     background-attachment: fixed;
     font-family: Roboto;
 }
-
-.contenedor-form {
-    background: rgba(0,0,0,.7);
-    max-width: 500px;
-    width: 100%;
-    margin: 48px auto;
-    border-radius: 5px;
-    color: #fff;
-    position: relative;
-    /*padding: 40px;*/
+#contacto {
+   background-color: darkblue;
+   width: 80%;
+   text-align:center;
 }
-
-.contenedor-form .toggle {
-    position: absolute;
-    top: 7px;
-    right: 7px;
-    width: 100px;
-    height: 30px;
-    font-size: 12px;
-    line-height: 25px;
-    text-align: center;
-    border-top: 2px solid #ff851b;
-    border-bottom: 2px solid #ff851b;
-    cursor: pointer;
-    transition: all .5s ease;
-}
-
-.contenedor-form .toggle:hover {
-    border-top: 2px solid #0075d9;
-    border-bottom: 2px solid #0075d9;
-}
-
-.contenedor-form .toggle span {
-    letter-spacing: 1px;
-}
-
-.contenedor-form h2 {
-    margin: 0 0 28px 0;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 1;
-}
-.contenedor-form input[type="text"],
-.contenedor-form input[type="password"],
-.contenedor-form input[type="email"] {
-    outline: none;
-    display: block;
-    width: 100%;
-    padding: 10px 15px;
-    margin: 0 0 20px 0;
-    background: rgba(0,0,0,.5);
-    color: #fff;
-    border: none;
-    border-radius: 2px;
-    border-bottom: 4px solid #ff851b;
-    box-sizing: border-box;
+#contact_form {
+    background-size: cover;
+    background-attachment: fixed;
     font-family: Roboto;
-    font-size: 14px;
-    font-weight:normal;
-    transition: all .5s ease;
-}
-
-.contenedor-form input[type="text"]:focus,
-.contenedor-form input[type="password"]:focus,
-.contenedor-form input[type="email"]:focus {
-    border-bottom: 4px solid #0075d9;
-}
-
-.contenedor-form input[type="submit"] {
-    background: #FF851B;
-    color: #FFF;
-    width: 100%;
-    border: none;
-    padding: 10px 0;
-    font-size: 16px;
-    font-weight: normal;
-    font-family: Roboto;
-    letter-spacing: 1px;
-    cursor: pointer;
-    transition: all .5s ease;
-}
-
-.contenedor-form input[type="submit"]:hover {
-    background: rgba(0, 117, 217, 0.7);
-}
-
-.contenedor-form .reset-password {
-    background: rgba(0, 117, 217, .7);
-    width: 100%;
-    padding: 15px 0;
-    text-align: center;
-    border-bottom-left-radius: 5px;
-    border-bottom-right-radius: 5px;
-}
-
-.contenedor-form .reset-password a {
-    color: #fff;
-    text-decoration: none;
-    font-size: 16px;
-}
-
-.contenedor-form .formulario {
-    display: none;
-    padding: 40px;
-}
-
-.contenedor-form .formulario:nth-child(2) {
-    display: block;
 }
